app/javascript/stylesheets/layout.css
/* Prevent shifting on pages that don't need scrolling */
html {
  overflow-y: scroll;
}

body {
  margin: 0;
  background-color: var(--overall-background-color);
  color: var(--overall-text-color);
}
body, select, input {
  font-family: "Open Sans", sans-serif, "Segoe UI Emoji";
}
body:lang(zh-CN), select:lang(zh-CN), input:lang(zh-CN) {
  font-family: "Open Sans", "Microsoft YaHei UI", sans-serif, "Segoe UI Emoji";
}
body:lang(zh-TW), select:lang(zh-TW), input:lang(zh-TW) {
  font-family: "Open Sans", "Microsoft JHengHei UI", sans-serif, "Segoe UI Emoji";
}
pre, code {
  direction: ltr !important;
}
textarea {
  resize: vertical;
}

a {
  color: var(--link-color);
}
a:visited {
  color: var(--link-visited-color);
}

input[type="checkbox"], input[type="radio"] {
  vertical-align: middle;
}

.width-constraint {
  margin: auto;
  max-width: 1200px;
}
@media screen and (max-width: 1228px) {
  .width-constraint {
    margin: auto 1.2vw;
  }
}
@media screen and (max-width: 400px) {
  .width-constraint {
    margin: auto 0;
  }
}

.inline-list, .block-list {
  padding-left: 0;
  padding-right: 0;
  list-style: none;
}
.inline-list {
  display: inline;
}
.block-list {
  display: block;
  margin: 0
}
.inline-list li, .block-list li {
  display: inline;
}
.inline-list li:after, .block-list li:after {
  content: ", ";

}
body:lang(he) .inline-list li:after, body:lang(he) .block-list li:after,
body:lang(ar) .inline-list li:after, body:lang(ar) .block-list li:after,
body:lang(ug) .inline-list li:after, body:lang(ug) .block-list li:after,
body:lang(ckb) .inline-list li:after, body:lang(ckb) .block-list li:after {
  content: "،";
}
.inline-list li:last-child:after, .block-list li:last-child:after {
  content: "";
}
dt[title] > span {
  border-bottom: 1px dotted black;
}

.form-section {
  margin-bottom: 2em;
}
.form-control {
  margin-bottom: 1em;
}
.form-control textarea, #ace-editor {
  width: 100%;
  box-sizing: border-box;
  margin-top: 1px;
  margin-bottom: 1px;
}
.form-control textarea:not([rows]), #ace-editor {
  height: 20em;
}
#ace-editor {
  border: 1px solid #BBB;
  border-style: inset;
  resize: both;
}
.form-control input:not([type=radio]):not([type=file]):not([type=checkbox]):not([type=search]):not([type=submit]):not([size]) {
  box-sizing: border-box;
  width: 100%;
}
.radio-group input[type=radio] {
  margin-left: 1em;
}
.form-control label {
  font-weight: bold;
}
.form-control label.radio-label, .form-control label.checkbox-label {
  font-weight: normal;
}
label.subselection-radio-title {
  font-weight: normal;
  font-size: small;
  display: block;
  margin-left: 3px;
}
.field_with_errors textarea {
  background-color: var(--field-with-errors);
}
.label-note {
  font-size: smaller;
}
.screenshots-controls > *:not(label) {
  padding-left: 1em;
}
.add-screenshot-control, .screenshot-control {
  clear: left;
}
.screenshot-control > * {
  vertical-align: middle;
}
.screenshot-control a {
  float: left;
  min-width: 150px;
  text-align: center;
}

#script-info, .user-list, .text-content, .discussion-list, .notification-list {
  padding: 0 1em 1em;
}
#script-info > *:last-child, .user-list > *:last-child, .text-content > *:last-child, .discussion-list > *:last-child, .notification-list > *:last-child {
  margin-bottom: 0;
}
.script-list {
  padding: 0;
}

.script-list, .user-list, .text-content, .discussion-list, .notification-list {
  list-style-type: none;
  box-shadow: 0 0 5px var(--content-box-shadow-color);
  background-color: var(--content-background-color);
  border: 1px solid var(--content-border-color);
  border-radius: 5px;
  box-sizing: border-box;
  margin: 14px 0;
}
.text-content:last-child {
  margin-bottom: 0;
}
.user-list {
  padding: 1em;
  margin: 1em 0;
}
.script-link, .script-description, .user-link {
  /* Prevent e.g. RTL user name in LTR layout from showing punctuation on an unexpected side. */
  unicode-bidi: isolate;
}
.list-option-groups ~ ol {
  width: calc(960px - 14em);
}
.text-content .list-option-groups ~ ol {
  width: calc(960px - 16em);
}
@media screen and (max-width: 960px) {
  #script-info, .user-list, .text-content {
    padding: 0 1.2vw 1.2vw;
  }
}
@media screen and (max-width: 400px) {
  .script-list, .user-list, .text-content, .discussion-list, .notification-list {
    border-left: 0;
    border-right: 0;
  }
  .user-list, .text-content, .discussion-list, .notification-list, .script-list-description {
    padding-left: 1em;
    padding-right: 1em;
  }
  .discussion-list-header, .user-list-header, .library-list-header {
    padding-left: 1em;
    padding-right: 1em;
    margin-top: 15px;
    margin-bottom: 10px;
  }
  #script-info {
    padding-left: 1em;
    padding-right: 1em;
  }
  #script-links {
    margin-left: -1em;
    margin-right: -1em;
    padding: 0;
  }
  #additional-info {
    margin-left: -1em;
    margin-right: -1em;
  }
}


.script-list li:not(.ad-entry) {
  border-bottom: 1px solid var(--content-separator-color);
  padding: 1em;
}

.script-list .cf-wrapper {
  margin: 0 !important;
}

@media screen and (max-width: 960px) {
  .script-list li:not(.ad-entry) {
    padding: 1.2vw;
  }
}

.script-list h2 {
  margin: 0;
  font-size: 18px;
}
.script-list p {
  margin: 0;
}
.script-list footer {
  margin-top: 0.25em;
}


.list-current {
  font-weight: bold;
}
.script-list h2 {
  font-weight: bold;
}
.script-list .description {
  font-weight: normal;
  display: block;
  margin: .5em 0;
  font-size: smaller;
}
.script-list .name-description-separator {
  display: none;
}
#script-description,
.script-list h2 > a,
.script-list .description {
  word-wrap: break-word;
}

@media screen and (max-width: 720px) {
  .script-list, #script-content {
    margin-left: unset;
  }
}

.good-rating-count, .ok-rating-count, .bad-rating-count {
  display: inline-block;
  min-width: 1em;
  text-align: center;
  padding: 0 0.25em;
  border: 1px solid #DDDDDD;
  border-radius: 10px;
}
/* ... */

